fixed issue with button moving on overflow at certain resolutions.

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,12 +1,10 @@
 .profile__description {
-  margin-left: clamp(0px, (4.7vw - 30px), 30px);
-  align-self: center;
-  grid-area: desc;
-  display: grid;
-  grid-template-areas:
-    "profile-n  profile-b"
-    "profile-s  profile-s";
-  white-space: nowrap;
-  width: max-content;
-  width: clamp(100% - 150px, 80vw, 430px);
+	margin-left: clamp(0px, (4.7vw - 30px), 30px);
+	align-self: center;
+	grid-area: desc;
+	display: grid;
+	grid-template-areas: "profile-n  profile-b" "profile-s  profile-s";
+	white-space: nowrap;
+	width: max-content;
+	width: clamp(100% - 150px, 80vw, 430px);
 }
