--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,19 +1,17 @@
 .profile__job {
-  grid-area: profile-s;
-  margin: clamp(14px, 1.25vw, 16px) 0 0;
-  padding: 0;
-  font-style: normal;
-  font-weight: normal;
-  font-size: clamp(14px, 1.42vw, 18px);
-  line-height: clamp(17px, 1.35vw, 22px);
-  width: max-content;
-  max-width: clamp(32vw, 320px, 90vw);
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  transition:overflow .5s ease-in-out;
+	grid-area: profile-s;
+	margin: clamp(14px, 1.25vw, 16px) auto 0;
+	padding: 0;
+	font-style: normal;
+	font-weight: normal;
+	font-size: clamp(14px, 1.42vw, 18px);
+	line-height: clamp(17px, 1.35vw, 22px);
+	max-width: clamp(280px, 50vw ,500px);
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	transition: overflow .5s ease-in-out;
 }
-
 .profile__job:hover {
   overflow: visible;
   white-space: normal;
